--- a/classification_KNN.ipynb
+++ b/classification_KNN.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "r1LUKbkLbMWk"
       ],
-      "authorship_tag": "ABX9TyOPg3YSfArxLy/z1n+sLq4j",
+      "authorship_tag": "ABX9TyMT4K0MJnfDFV9v2BsedT1C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 24,
       "metadata": {
         "id": "UU1zJIVIVGrR"
       },
@@ -53,9 +53,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N2wj7rw-WLbv",
-        "outputId": "a7d29e9e-fff5-43b2-c8c1-ca32f70e9071"
+        "outputId": "891232f7-f923-442d-bb33-c4ac73ca145e"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 25
         }
       ]
     },
@@ -204,19 +204,19 @@
           "height": 311
         },
         "id": "BIrvS4CtWNAw",
-        "outputId": "75ea428a-3365-4b6e-aa45-08c3dd54e956"
+        "outputId": "14a6b422-0ed6-45b6-a61c-6deac7491f4f"
       },
-      "execution_count": 16,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f50f04dbf10>"
+              "<matplotlib.image.AxesImage at 0x7f103fcc70d0>"
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 26
         },
         {
           "output_type": "display_data",
@@ -254,19 +254,19 @@
           "height": 311
         },
         "id": "RUcTzhpaWh0e",
-        "outputId": "431c7464-908b-41f9-83c4-cc36a45efab0"
+        "outputId": "97ecea74-08b5-4e75-8cff-afa1785b5ac6"
       },
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f50f03dd250>"
+              "<matplotlib.image.AxesImage at 0x7f103fd22400>"
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 27
         },
         {
           "output_type": "display_data",
@@ -315,9 +315,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hBctNcqBX--7",
-        "outputId": "2761d7c1-4292-4b3c-8848-b9f860fbc43b"
+        "outputId": "b29f3c15-8ed6-4371-9adc-c3d797bfe72a"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 28
         }
       ]
     },
@@ -484,9 +484,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pajQxWsEYeYA",
-        "outputId": "a24ac183-c9b1-495f-e626-d012e6000d58"
+        "outputId": "eea4bf9a-6ee5-4f77-b0c1-b274a8934c18"
       },
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -531,9 +531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BsYDUnA1Y9J1",
-        "outputId": "8ff25daa-6d30-4526-e228-6347aeb7a175"
+        "outputId": "b18a40fe-2ddd-4940-d8ae-5a3cdabe0950"
       },
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8HbyzHV-aBtp",
-        "outputId": "a6932dc3-4d9a-42c9-b2f0-c949ea69ebe8"
+        "outputId": "59b7250f-5934-4dfb-9e54-eec8beb71736"
       },
-      "execution_count": 24,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +652,7 @@
       "metadata": {
         "id": "qSbJxjsebVzb"
       },
-      "execution_count": 28,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -665,9 +665,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ow7SwhN2cJZ6",
-        "outputId": "c0c7d713-83cd-42d1-8478-5fc666129521"
+        "outputId": "4c1ab9b0-35e2-4504-83ad-a6daac5b3491"
       },
-      "execution_count": 29,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -677,7 +677,427 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Homework 7\n",
+        "หา โมเดลที่ดีที่สุด จาก Decision tree ,NaiveBayes,KNN,ANN โดย เปรียบเทียบ อย่างละสอง parameter sets\n",
+        "\n",
+        "from last parameter choose k=3 (without distance_weight and with distance_weight) with decision tree ,NaiveBayes,KNN,ANN "
+      ],
+      "metadata": {
+        "id": "r_1efcFZIotr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## พารามิเตอร์แรก k3 without distance_weight"
+      ],
+      "metadata": {
+        "id": "mTJlBdBQMYN4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 without dw Decision Tree"
+      ],
+      "metadata": {
+        "id": "uox_vsUlMmAZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Load the digits dataset\n",
+        "digits = load_digits()\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Fit a decision tree classifier with max depth = 5\n",
+        "clf = DecisionTreeClassifier(max_depth=5)\n",
+        "clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "pred = clf.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the classifier\n",
+        "acc = clf.score(X_test, y_test)\n",
+        "print(\"Accuracy:\", acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ALZhPzb1LKGV",
+        "outputId": "849e783d-32ef-4bdf-c812-7fa5f9644a23"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.6777777777777778\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 without dw Naive Bayes"
+      ],
+      "metadata": {
+        "id": "2GANML_9M2iH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Load the digits dataset\n",
+        "digits = load_digits()\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Fit a Gaussian Naive Bayes classifier\n",
+        "clf = GaussianNB()\n",
+        "clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "pred = clf.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the classifier\n",
+        "acc = clf.score(X_test, y_test)\n",
+        "print(\"Accuracy:\", acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kwmzn7MOMxhZ",
+        "outputId": "68d5b37b-b70a-48c6-8600-1667d38f7036"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.8472222222222222\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 without dw KNN k neighbor nearest"
+      ],
+      "metadata": {
+        "id": "07ION8neNSZF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# Load the digits dataset\n",
+        "digits = load_digits()\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Fit a k-NN classifier with k=3\n",
+        "clf = KNeighborsClassifier(n_neighbors=3)\n",
+        "clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "pred = clf.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the classifier\n",
+        "acc = clf.score(X_test, y_test)\n",
+        "print(\"Accuracy:\", acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fxn2znLDM7vq",
+        "outputId": "5cf0d011-fc45-4107-c966-a364b5f91716"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.9833333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 without dw ANN Artificial neural network"
+      ],
+      "metadata": {
+        "id": "U2I8sNLDN3LG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "# Load the digits dataset\n",
+        "digits = load_digits()\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.2, random_state=42)\n",
+        "\n",
+        "# Create an ANN classifier with one hidden layer of 100 neurons\n",
+        "clf = MLPClassifier(hidden_layer_sizes=(100,), random_state=42)\n",
+        "\n",
+        "# Fit the classifier to the training data\n",
+        "clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "pred = clf.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the classifier\n",
+        "acc = clf.score(X_test, y_test)\n",
+        "print(\"Accuracy:\", acc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4GLMHSeHNP0S",
+        "outputId": "f1bb20f8-e549-45ee-f672-1950d212e685"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.9833333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## พารามิเตอร์สอง k3 with distance_weight"
+      ],
+      "metadata": {
+        "id": "oKOlyeHKPBHk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 with dw Decision Tree"
+      ],
+      "metadata": {
+        "id": "voAUQKrEPBHn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.datasets import load_digits\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "from sklearn.neural_network import MLPClassifier\n",
+        "\n",
+        "# Load the digits dataset\n",
+        "digits = load_digits()\n",
+        "\n",
+        "# Split the dataset into training and testing sets\n",
+        "X_train, X_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.2, random_state=42)\n",
+        " #Create a decision tree classifier\n",
+        "dt = DecisionTreeClassifier(random_state=42)\n",
+        "\n",
+        "# Fit the classifier to the training data\n",
+        "dt.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "dt_pred = dt.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the decision tree classifier\n",
+        "dt_acc = dt.score(X_test, y_test)\n",
+        "print(\"Decision Tree Accuracy:\", dt_acc)"
+      ],
+      "metadata": {
+        "outputId": "86699000-080d-467a-86a1-b2ccac356a88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yN2ouVIIPBHn"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Decision Tree Accuracy: 0.8416666666666667\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 with dw Naive Bayes"
+      ],
+      "metadata": {
+        "id": "lHI0b4TuPBHp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a Naive Bayes classifier\n",
+        "nb = GaussianNB()\n",
+        "\n",
+        "# Fit the classifier to the training data\n",
+        "nb.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "nb_pred = nb.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the Naive Bayes classifier\n",
+        "nb_acc = nb.score(X_test, y_test)\n",
+        "print(\"Naive Bayes Accuracy:\", nb_acc)"
+      ],
+      "metadata": {
+        "outputId": "637cb86b-b1bc-47d0-dd2e-6aae79c48ba6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dMN3iKgkPBHq"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Naive Bayes Accuracy: 0.8472222222222222\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 with dw KNN k neighbor nearest"
+      ],
+      "metadata": {
+        "id": "yDvpfWQuPBHr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a k-NN classifier with k=3 and distance weighting\n",
+        "knn = KNeighborsClassifier(n_neighbors=3, weights='distance')\n",
+        "\n",
+        "# Fit the classifier to the training data\n",
+        "knn.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "knn_pred = knn.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the k-NN classifier\n",
+        "knn_acc = knn.score(X_test, y_test)\n",
+        "print(\"k-NN Accuracy:\", knn_acc)"
+      ],
+      "metadata": {
+        "outputId": "725b3111-1cd7-4552-84f8-141c60a44fce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cXRETxMwPBHs"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k-NN Accuracy: 0.9833333333333333\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### k3 with dw ANN Artificial neural network"
+      ],
+      "metadata": {
+        "id": "tmrIt_rJPBHt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an ANN classifier with one hidden layer of 100 neurons\n",
+        "ann = MLPClassifier(hidden_layer_sizes=(100,), random_state=42)\n",
+        "\n",
+        "# Fit the classifier to the training data\n",
+        "ann.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the class labels of the test set\n",
+        "ann_pred = ann.predict(X_test)\n",
+        "\n",
+        "# Compute the accuracy of the ANN classifier\n",
+        "ann_acc = ann.score(X_test, y_test)\n",
+        "print(\"ANN Accuracy:\", ann_acc)"
+      ],
+      "metadata": {
+        "outputId": "89feefc4-b053-4ac9-8e1b-bf3d9ac78575",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HJyjuK7mPBHu"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ANN Accuracy: 0.9833333333333333\n"
+          ]
         }
       ]
     },
@@ -685,9 +1105,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "4CRNcke4d1FZ"
+        "id": "BDySEEB8Qcxq"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     }
   ]
